[tool.poetry]
name = "sentry-bug"
version = "0.1.0"
description = ""
authors = ["Jarrad Whitaker <155397737+jwhitaker-gridcog@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sentry-sdk = "^1.45.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
